<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/peso"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_peso"
        android:padding="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPeso"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/altura"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPeso"
        />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@id/etPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvAltura"
        />

    <TextView
        android:id="@+id/tvImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/imc"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAltura"
        />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/zeros"
        app:layout_constraintStart_toStartOf="@id/etAltura"
        app:layout_constraintBottom_toBottomOf="@id/tvImc"
        />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/calcular"
        app:layout_constraintStart_toStartOf="@id/tvResultado"
        app:layout_constraintTop_toBottomOf="@id/tvResultado"
        />

    <Button
        android:id="@+id/btLimpar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/limpar"
        app:layout_constraintStart_toEndOf="@id/btCalcular"
        app:layout_constraintBottom_toBottomOf="@id/btCalcular"
        />


</androidx.constraintlayout.widget.ConstraintLayout>